--- a/ooniprobe/ca.lproj/Localizable.strings
+++ b/ooniprobe/ca.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "Onboarding.PopQuiz.Wrong.Button.Back" = "Enrere";
 "Onboarding.PopQuiz.Wrong.Button.Continue" = "Continua";
 "Onboarding.PopQuiz.1.Title" = "Pregunta 1/2";
-"Onboarding.PopQuiz.1.Question" = "Si algú està supervisant meva activitat a Internet, veurà que estic executant OONI Probe.";
+"Onboarding.PopQuiz.1.Question" = "Si algú està supervisant la meva activitat a Internet, veurà que estic executant OONI Probe.";
 "Onboarding.PopQuiz.1.Wrong.Title" = "Avís";
 "Onboarding.PopQuiz.1.Wrong.Paragraph" = "L'OONI Probe no és una eina de privadesa. Qualsevol que supervisi la vostra activitat a Internet veurà quin programari esteu executant.";
 "Onboarding.PopQuiz.2.Title" = "Pregunta 2/2";
@@ -113,17 +113,17 @@
 "TestResults.Summary.InstantMessaging.Hero.Apps.Singular" = "Aplicació";
 "TestResults.Summary.InstantMessaging.Hero.Apps.Plural" = "Aplicacions";
 "TestResults.Details.Hero.Runtime" = "Temps d'execució";
-"TestResults.Details.Methodology" = "Methodology";
+"TestResults.Details.Methodology" = "Metodologia";
 "TestResults.Details.ViewLog" = "Mostra els registre";
 "TestResults.Details.RawData" = "Dades";
-"TestResults.Details.CopyExplorerURL" = "Copy Explorer URL";
+"TestResults.Details.CopyExplorerURL" = "Copia l'URL de l'explorador";
 "TestResults.Details.CopyToClipboard" = "Copia al porta-retalls";
 "TestResults.Details.Failed.Title" = "Ha fallat";
 "TestResults.Details.Failed.Paragraph" = "Podeu tornar a provar aquesta prova";
 "TestResults.Details.Failed.TryAgain" = "Torna-ho a provar";
 "TestResults.Details.Websites.Reachable.Hero.Title" = "Accessible";
 "TestResults.Details.Websites.Reachable.Content.Paragraph" = "%@ és accessible.";
-"TestResults.Details.Websites.LikelyBlocked.Hero.Title" = "Probablement bloquejat";
+"TestResults.Details.Websites.LikelyBlocked.Hero.Title" = "Probablement blocat";
 "TestResults.Details.Websites.LikelyBlocked.Content.Paragraph" = "%@ està probablement blocat degut a %@.\n\nNota: es poden produir falsos positius. Més informació [aquí](https://ooni.io/nettest/web-connectivity/).";
 "TestResults.Details.Websites.LikelyBlocked.Content.LearnToCircumvent" = "Elusió de censura";
 "TestResults.Details.Websites.LikelyBlocked.BlockingReason.DNS" = "**Manipulació DNS**";
@@ -197,13 +197,13 @@
 "Modal.Error.CantDownloadURLs" = "No s'ha pogut baixar la llista d'URL. Torneu-ho a provar.";
 "Modal.Error.NotificationNotEnabled" = "Calen permisos de notificació. Activeu-los a la Configuració del telèfon i després activeu-los a l'aplicació OONI Probe.";
 "Modal.Error.NotificationNotEnabled.GoToSettings" = "Aneu a Configuració";
-"Modal.Error.CantCloseScreen" = "Aquesta pantalla està bloquejada mentre s'està executant una prova.";
-"Modal.Error.RawDataNoInternet" = "You need to be connected to the internet to download the raw measurement data.";
+"Modal.Error.CantCloseScreen" = "Aquesta pantalla està blocada mentre s'està executant una prova.";
+"Modal.Error.RawDataNoInternet" = "Heu d'estar connectats a Internet per baixar les dades de mesura sense processar.";
 "Modal.ResultsNotUploaded.Title" = "Els resultats no s'han pujat";
 "Modal.ResultsNotUploaded.Paragraph" = "Alguns dels resultats de les vostres proves no s'han pujat als servidors d'OONI. Si desitgeu contribuir al conjunt de dades d'OONI, pugueu-los.";
 "Modal.ResultsNotUploaded.Button.Upload" = "Pujada";
-"Modal.ResultsNotUploaded.Uploading" = "Uploading %@ ...";
-"Toast.ResultsUploaded" = "Upload successful";
+"Modal.ResultsNotUploaded.Uploading" = "S'està pujant %@...";
+"Toast.ResultsUploaded" = "S'ha pujat amb èxit";
 "Modal.EnableNotifications.AutomatedTesting" = "Activeu els permisos de notificació per executar les proves automàticament.";
 "Modal.EnableNotifications.News" = "Activeu els permisos de notificació per rebre actualitzacions de notícies.";
 "Modal.EnableNotifications.Any" = "Activeu els permisos de notificació per rebre notificacions de tramesa automàtica.";
@@ -219,13 +219,13 @@
 "Modal.ManualUpload.Paragraph" = "Aquest paràmetre us permet carregar manualment mesures no publicades.";
 "Modal.ManualUpload.Enable" = "Habilitar";
 "Modal.ManualUpload.Disable" = "No, gràcies";
-"Modal.UploadFailed.Title" = "Upload failed";
-"Modal.UploadFailed.Paragraph" = "Would you like to retry or cancel?";
-"Modal.Error.LogNotFound" = "Log file not found";
-"Modal.Error.NoValidUrls" = "No valid URLs found";
-"Modal.Error.JsonEmpty" = "JSON empty";
-"Toast.CopiedToClipboard" = "Copied to clipboard";
-"Toast.WillBeAvailable" = "Will be available within 24h";
+"Modal.UploadFailed.Title" = "Ha fallat la pujada";
+"Modal.UploadFailed.Paragraph" = "Voleu tornar-ho a provar o cancel·lar?";
+"Modal.Error.LogNotFound" = "No s'ha trobat el fitxer de registre";
+"Modal.Error.NoValidUrls" = "No s'ha trobat URL vàlides";
+"Modal.Error.JsonEmpty" = "JSON buit";
+"Toast.CopiedToClipboard" = "S'ha copiat al porta-retalls";
+"Toast.WillBeAvailable" = "Estarà disponible en 24 hores";
 "Snackbar.ResultsNotUploaded.Text" = "No s'ha pujat";
 "Snackbar.ResultsNotUploaded.Upload" = "Pujada";
 "Snackbar.ResultsSomeNotUploaded.Text" = "Alguns no s'han pujat";
@@ -252,17 +252,6 @@
 "Settings.Notifications.Enabled" = "Activades";
 "Settings.Notifications.OnTestCompletion" = "Informa en finalitzar la prova";
 "Settings.Notifications.OnNews" = "Mur de notícies";
-"Settings.AutomatedTesting.Label" = "Automated testing";
-"Settings.AutomatedTesting.RunAutomatically" = "Run tests automatically";
-"Settings.AutomatedTesting.Reminder" = "Remind me to run tests";
-"Settings.AutomatedTesting.EnabledTests" = "Proves activades";
-"Settings.AutomatedTesting.Reminder.Time" = "Temps";
-"Settings.AutomatedTesting.RunAutomatically.TimesPerDay" = "Test runs per day";
-"Settings.AutomatedTesting.Categories.Label" = "Categories";
-"Settings.AutomatedTesting.Categories.Title" = "Categories de lloc web per provar";
-"Settings.AutomatedTesting.Categories.Subtitle" = "%@ categories activades";
-"Settings.AutomatedTesting.MonthlyMobileAllowance" = "Quota mensual de dades mòbils";
-"Settings.AutomatedTesting.MonthlyWiFiAllowance" = "Quota mensual de Wi-Fi";
 "Settings.Sharing.Label" = "Comparteix";
 "Settings.Sharing.UploadResults" = "Publica automàticament els resultats";
 "Settings.Sharing.UploadResultsManually" = "Pujada manual dels resultats";
@@ -299,10 +288,8 @@
 "Settings.Performance.DashServerAddress" = "Servidor DASH";
 "Settings.Performance.DashServerPort" = "Port del servidor DASH";
 "Settings.SendEmail.Label" = "Envia un correu per donar suport";
-"Settings.SendEmail.Error" = "Please send an email to bugs@openobservatory.org with information on the app and iOS version. Tap \"Copy to clipboard\" below to copy our email address.";
+"Settings.SendEmail.Error" = "Envieu un correu a bugs@openobservatory.org amb informació sobre l'aplicació i la versió d'iOS. Toqueu «Copia al porta-retalls» a continuació per copiar la nostra adreça de correu.";
 "Notification.FinishedRunning" = "Ha finalitzat l'execució";
-"Notification.RunTestReminder" = "Hey, it's time to run OONI Probe!";
-"Notification.RunAutomatically" = "Running OONI Probe tests (automated testing enabled)";
 "OONIBrowser.TryMirror" = "Prova un mirall";
 "OONIBrowser.Loading" = "S'està carregant...";
 "OONIBrowser.Error" = "S'ha produït un error inesperat. Torneu a carregar aquesta pàgina.";
