--- a/ooniprobe/fa.lproj/Localizable.strings
+++ b/ooniprobe/fa.lproj/Localizable.strings
@@ -116,7 +116,7 @@
 "TestResults.Details.Methodology" = "روش‌شناسی";
 "TestResults.Details.ViewLog" = "نمایش لاگ";
 "TestResults.Details.RawData" = "داده‌‌ها";
-"TestResults.Details.CopyExplorerURL" = "Copy Explorer URL";
+"TestResults.Details.CopyExplorerURL" = "کپی آدرس Explorer";
 "TestResults.Details.CopyToClipboard" = "به حافظه کوتاه مدت کپی کن";
 "TestResults.Details.Failed.Title" = "ناموفق";
 "TestResults.Details.Failed.Paragraph" = "می‌توانید این تست را دوباره انجام دهید";
@@ -198,12 +198,12 @@
 "Modal.Error.NotificationNotEnabled" = "اجازه‌ی اعلان ضروری است. لطفا در تنظیمات تلفن خود و سپس در اپ OONIProbe آن را فعال کنید.";
 "Modal.Error.NotificationNotEnabled.GoToSettings" = "به تنظیمات بروید";
 "Modal.Error.CantCloseScreen" = "این صفحه در زمان اجرای تست قفل است.";
-"Modal.Error.RawDataNoInternet" = "You need to be connected to the internet to download the raw measurement data.";
+"Modal.Error.RawDataNoInternet" = "برای بارگیری داده های خام اندازه گیری، باید به اینترنت متصل شوید.";
 "Modal.ResultsNotUploaded.Title" = "نتایج بارگذاری نشده‌اند";
 "Modal.ResultsNotUploaded.Paragraph" = "بعضی از نتایج تست‌ها به سرورهای OONI  بارگذاری نشده‌اند. اگر مایل به مشارکت در مجموع داده‌‌های OONI هستید، لطفا آن‌ها را بارگذاری کنید.";
 "Modal.ResultsNotUploaded.Button.Upload" = "آپلود";
 "Modal.ResultsNotUploaded.Uploading" = "بارگذاری %@ ...";
-"Toast.ResultsUploaded" = "Upload successful";
+"Toast.ResultsUploaded" = "بارگذاری با موفقیت انجام شد.";
 "Modal.EnableNotifications.AutomatedTesting" = "اجازه‌ی اعلان را فعال کنید تا تست‌ها به صورت خودکار اجرا شوند.";
 "Modal.EnableNotifications.News" = "اجازه‌ی اعلان را فعال کنید تا اخبار بروز رسانی را دریافت کنید.";
 "Modal.EnableNotifications.Any" = "اجازه‌ی اعلان را فعال کنید تا اعلان های ضروری را دریافت کنید.";
@@ -221,11 +221,11 @@
 "Modal.ManualUpload.Disable" = "نه، ممنون";
 "Modal.UploadFailed.Title" = "آپلود ناموفق بود";
 "Modal.UploadFailed.Paragraph" = "آیا می‌خواهید دوباره تلاش کنید یا لغو کنید؟";
-"Modal.Error.LogNotFound" = "Log file not found";
-"Modal.Error.NoValidUrls" = "No valid URLs found";
-"Modal.Error.JsonEmpty" = "JSON empty";
+"Modal.Error.LogNotFound" = "فایل لاگ یافت نشد";
+"Modal.Error.NoValidUrls" = "هیچ URL معتبری یافت نشد";
+"Modal.Error.JsonEmpty" = "JSON خالی است";
 "Toast.CopiedToClipboard" = "در حافظه‌ی موقت کپی شد";
-"Toast.WillBeAvailable" = "Will be available within 24h";
+"Toast.WillBeAvailable" = "بعد از 24 ساعت در دسترس خواهد بود";
 "Snackbar.ResultsNotUploaded.Text" = "بارگذاری نشدند";
 "Snackbar.ResultsNotUploaded.Upload" = "آپلود";
 "Snackbar.ResultsSomeNotUploaded.Text" = "برخی بارگذاری نشدند";
@@ -252,17 +252,6 @@
 "Settings.Notifications.Enabled" = "فعال است";
 "Settings.Notifications.OnTestCompletion" = "پایان تست را اعلام کن";
 "Settings.Notifications.OnNews" = "خوراک خبری";
-"Settings.AutomatedTesting.Label" = "Automated testing";
-"Settings.AutomatedTesting.RunAutomatically" = "Run tests automatically";
-"Settings.AutomatedTesting.Reminder" = "Remind me to run tests";
-"Settings.AutomatedTesting.EnabledTests" = "تست‌های فعال";
-"Settings.AutomatedTesting.Reminder.Time" = "زمان";
-"Settings.AutomatedTesting.RunAutomatically.TimesPerDay" = "Test runs per day";
-"Settings.AutomatedTesting.Categories.Label" = "دسته‌بندی‌ها";
-"Settings.AutomatedTesting.Categories.Title" = "دسته‌بندی‌های وبسایت برای تست";
-"Settings.AutomatedTesting.Categories.Subtitle" = "%@ دسته بندی فعال است";
-"Settings.AutomatedTesting.MonthlyMobileAllowance" = "خرج ماهانه‌ی موبایل";
-"Settings.AutomatedTesting.MonthlyWiFiAllowance" = "خرج  ماهانه‌ی WiFi";
 "Settings.Sharing.Label" = "به اشتراک گذاری";
 "Settings.Sharing.UploadResults" = "انتشار خودکار نتایج";
 "Settings.Sharing.UploadResultsManually" = "بارگذاری دستی نتایج";
@@ -301,8 +290,6 @@
 "Settings.SendEmail.Label" = "ارسال ایمیل به پشتیبانی";
 "Settings.SendEmail.Error" = "لطفا یک ایمیل به bugs@openobservatory.org همراه با اطلاعات برنامه و نسخه‌ی iOS ارسال کنید. بر روی «کپی در حافظه‌ی موقت» در پایین بزنید تا آدرس ایمیل کپی شود.";
 "Notification.FinishedRunning" = "اجرا به پایان رسید";
-"Notification.RunTestReminder" = "Hey, it's time to run OONI Probe!";
-"Notification.RunAutomatically" = "Running OONI Probe tests (automated testing enabled)";
 "OONIBrowser.TryMirror" = "سرورهای آینه را امتحان کنید";
 "OONIBrowser.Loading" = "در حال بارگذاری...";
 "OONIBrowser.Error" = "یک خطا غیرمنتظره رخ داده است. لطفا صفحه را بارگذاری مجدد کنید.";
