--- a/ooniprobe/fr.lproj/Localizable.strings
+++ b/ooniprobe/fr.lproj/Localizable.strings
@@ -43,13 +43,13 @@
 "Dashboard.Card.Subtitle" = "Toucher la carte pour en savoir plus";
 "Dashboard.Card.Seconds" = "~%@s";
 "Dashboard.Websites.Card.Description" = "Testez le blocage de sites Web";
-"Dashboard.Websites.Overview.Paragraph" = "Vérifiez le blocage des sites Web grâce au [Test de connectivité Web](https://ooni.io/nettest/web-connectivity/) de l’OONI.\n\nChaque fois que vous touchez Lancer, vous testez différents sites Web provenant des listes de tests [mondiale](https://github.com/citizenlab/test-lists/blob/master/lists/global.csv) et [propre à un pays](https://github.com/citizenlab/test-lists/tree/master/lists) du « Citizen Lab ».\n\nPour tester les sites de votre choix, touchez le bouton « Choisir des sites Web » ou sélectionnez des catégories de sites dans les paramètres de cette carte. \n\nCe test mesure si les sites Web sont bloqués par une manipulation DNS, par un blocage TCP/IP ou par un mandataire HTTP transparent.\n\nVos résultats seront publiés dans l’[explorateur de l’OONI](https://explorer.ooni.io/world/) et l’[API de l’OONI](https://api.ooni.io/).";
+"Dashboard.Websites.Overview.Paragraph" = "Vérifiez le blocage des sites Web grâce au [Test de connectivité Web](https://ooni.io/nettest/web-connectivity/) de l’OONI.\n\nChaque fois que vous touchez Lancer, vous testez différents sites Web provenant des listes de tests [mondiale](https://github.com/citizenlab/test-lists/blob/master/lists/global.csv) et [propre à un pays](https://github.com/citizenlab/test-lists/tree/master/lists) du « Citizen Lab ».\n\nPour tester les sites de votre choix, touchez le bouton « Choisir des sites Web » ou sélectionnez des catégories de sites dans les paramètres de cette carte. \n\nCe test mesure si les sites Web sont bloqués par une manipulation DNS, par un blocage TCP/IP ou par un mandataire HTTP transparent.\n\nVos résultats seront publiés dans l’[explorateur OONI](https://explorer.ooni.io/world/) et l’[API OONI](https://api.ooni.io/).";
 "Dashboard.Performance.Card.Description" = "Testez la vitesse et les performances de votre réseau";
-"Dashboard.Performance.Overview.Paragraph" = "Mesurez la vitesse et les performances de votre réseau grâce au test [NDT](https://ooni.io/nettest/ndt/).\n\nMesurez les performances de la diffusion en continu de vidéos grâce au  test [DASH](https://ooni.io/nettest/dash/).\n\nCes tests consomment des données selon la vitesse de votre réseau.\n\nVos résultats seront publiés dans l’[explorateur de l’OONI](https://explorer.ooni.io/world/) et l’[API de l’OONI](https://api.ooni.io/).\n\nAvertissement : Ces tests reposent sur des serveurs tiers. Nous ne pouvons donc pas garantir que votre adresse IP ne sera pas recueillie.";
+"Dashboard.Performance.Overview.Paragraph" = "Mesurez la vitesse et les performances de votre réseau grâce au test [NDT](https://ooni.io/nettest/ndt/).\n\nMesurez les performances de la diffusion en continu de vidéos grâce au  test [DASH](https://ooni.io/nettest/dash/).\n\nCes tests consomment des données selon la vitesse de votre réseau.\n\nVos résultats seront publiés dans l’[explorateur OONI](https://explorer.ooni.io/world/) et l’[API OONI](https://api.ooni.io/).\n\nAvertissement : Ces tests reposent sur des serveurs tiers. Nous ne pouvons donc pas garantir que votre adresse IP ne sera pas recueillie.";
 "Dashboard.Middleboxes.Card.Description" = "Détecter les boîtiers intermédiaires dans votre réseau";
-"Dashboard.Middleboxes.Overview.Paragraph" = "Les fournisseurs d’accès à Internet utilisent souvent des appareils réseau (des boîtiers intermédiaires) pour diverses tâches propres au réseau (telles que la mise en cache). Ces boîtiers intermédiaires sont parfois utilisés pour censurer ou surveiller Internet.\n\nTrouvez des boîtiers intermédiaires dans votre réseau grâce aux tests de l’OONI [HTTP Ligne de requête invalide](https://ooni.io/nettest/http-invalid-request-line/) et [HTTP Manipulation du champ d’en-tête](https://ooni.io/nettest/http-header-field-manipulation/).\n\nVos résultats seront publiés dans l’[explorateur de l’OONI](https://explorer.ooni.io/world/) et l’[API de l’OONI](https://api.ooni.io/).";
+"Dashboard.Middleboxes.Overview.Paragraph" = "Les fournisseurs d’accès à Internet utilisent souvent des appareils réseau (des boîtiers intermédiaires) pour diverses tâches propres au réseau (telles que la mise en cache). Ces boîtiers intermédiaires sont parfois utilisés pour censurer ou surveiller Internet.\n\nTrouvez des boîtiers intermédiaires dans votre réseau grâce aux tests de l’OONI [HTTP Ligne de requête invalide](https://ooni.io/nettest/http-invalid-request-line/) et [HTTP Manipulation du champ d’en-tête](https://ooni.io/nettest/http-header-field-manipulation/).\n\nVos résultats seront publiés dans l’[explorateur OONI](https://explorer.ooni.io/world/) et l’[API OONI](https://api.ooni.io/).";
 "Dashboard.InstantMessaging.Card.Description" = "Testez le blocage des applis de messagerie instantanée";
-"Dashboard.InstantMessaging.Overview.Paragraph" = "Vérifiez si [WhatsApp](https://ooni.io/nettest/whatsapp/), [Facebook Messenger](https://ooni.io/nettest/facebook-messenger/) et [Telegram](https://ooni.io/nettest/telegram/) sont bloqués.\n\nVos résultats seront publiés dans l’[explorateur de l’OONI](https://explorer.ooni.io/world/) et l’[API de l’OONI](https://api.ooni.io/).";
+"Dashboard.InstantMessaging.Overview.Paragraph" = "Vérifiez si [WhatsApp](https://ooni.io/nettest/whatsapp/), [Facebook Messenger](https://ooni.io/nettest/facebook-messenger/) et [Telegram](https://ooni.ionettest/telegram/) sont bloqués.\n\nVos résultats seront publiés dans l’[explorateur OONI](https://explorer.ooni.io/world/) et l’[API OONI](https://api.ooni.io/).";
 "TestResults.Gbps" = "Gbps";
 "TestResults.Mbps" = "Mbps";
 "TestResults.Kbps" = "Kbps";
@@ -198,7 +198,7 @@
 "Modal.Error.NotificationNotEnabled" = "Les autorisations de notification sont nécessaires. Veuillez les activer dans les paramètres de votre téléphone, puis les activer dans votre appli OONI Probe.";
 "Modal.Error.NotificationNotEnabled.GoToSettings" = "Aller dans les Paramètres";
 "Modal.Error.CantCloseScreen" = "Cet écran est verrouillé pendant qu’un test est en cours.";
-"Modal.Error.RawDataNoInternet" = "You need to be connected to the internet to download the raw measurement data.";
+"Modal.Error.RawDataNoInternet" = "Vous devez être connecté à Internet pour télécharger les données brutes de mesure.";
 "Modal.ResultsNotUploaded.Title" = "Les résultats n’ont pas été téléversés";
 "Modal.ResultsNotUploaded.Paragraph" = "Certains de vos résultats de test n’ont pas été téléversés vers les serveurs de l’OONI. Si vous souhaitez contribuer à l’ensemble de données de l’OONI, veuillez les téléverser.";
 "Modal.ResultsNotUploaded.Button.Upload" = "Téléversement";
@@ -252,17 +252,6 @@
 "Settings.Notifications.Enabled" = "Activées";
 "Settings.Notifications.OnTestCompletion" = "Aviser à la fin du test";
 "Settings.Notifications.OnNews" = "Fil d’actualité";
-"Settings.AutomatedTesting.Label" = "Automated testing";
-"Settings.AutomatedTesting.RunAutomatically" = "Run tests automatically";
-"Settings.AutomatedTesting.Reminder" = "Remind me to run tests";
-"Settings.AutomatedTesting.EnabledTests" = "Tests activés";
-"Settings.AutomatedTesting.Reminder.Time" = "Heure";
-"Settings.AutomatedTesting.RunAutomatically.TimesPerDay" = "Test runs per day";
-"Settings.AutomatedTesting.Categories.Label" = "Catégories";
-"Settings.AutomatedTesting.Categories.Title" = "Catégories de sites Web à tester";
-"Settings.AutomatedTesting.Categories.Subtitle" = "%@ catégories sont activées";
-"Settings.AutomatedTesting.MonthlyMobileAllowance" = "Quota mobile mensuel";
-"Settings.AutomatedTesting.MonthlyWiFiAllowance" = "Quota Wi-Fi mensuel";
 "Settings.Sharing.Label" = "Partage";
 "Settings.Sharing.UploadResults" = "Publication automatique des résultats";
 "Settings.Sharing.UploadResultsManually" = "Téléversement manuel des résultats";
@@ -301,8 +290,6 @@
 "Settings.SendEmail.Label" = "Envoyer un courriel à l’assistance";
 "Settings.SendEmail.Error" = "Veuillez envoyer un courriel à bugs@openobservatory.org avec des renseignements sur la version de l’appli et d’iOS. Touchez « Copier dans le presse-papiers » ci-dessous pour copier votre adresse courriel.";
 "Notification.FinishedRunning" = "Le test est terminé.";
-"Notification.RunTestReminder" = "Hey, it's time to run OONI Probe!";
-"Notification.RunAutomatically" = "Running OONI Probe tests (automated testing enabled)";
 "OONIBrowser.TryMirror" = "Essayer un miroir";
 "OONIBrowser.Loading" = "Chargement…";
 "OONIBrowser.Error" = "Une erreur inattendue s’est produite. Veuillez recharger cette page.";
