--- a/ooniprobe/el.lproj/Localizable.strings
+++ b/ooniprobe/el.lproj/Localizable.strings
@@ -198,7 +198,7 @@
 "Modal.Error.NotificationNotEnabled" = "Χρειάζονται δικαιώματα ειδοποιήσεων. Ενεργοποίησέ τα στις Ρυθμίσεις του τηλεφώνου σου και στην εφαρμογή του OONI Probe.";
 "Modal.Error.NotificationNotEnabled.GoToSettings" = "Πήγαινε στις Ρυθμίσεις";
 "Modal.Error.CantCloseScreen" = "Αυτή η οθόνη είναι κλειδωμένη όσο εκτελείται κάποια δοκιμή.";
-"Modal.Error.RawDataNoInternet" = "Πρέπει να συνδεθείς στο διαδίκτυο για να κατεβάσεις τα ακατέργαστα δεδομένα μέτρησης.";
+"Modal.Error.RawDataNoInternet" = "You need to be connected to the internet to download the raw measurement data.";
 "Modal.ResultsNotUploaded.Title" = "Τα αποτελέσματα δεν ανέβηκαν";
 "Modal.ResultsNotUploaded.Paragraph" = "Μερικά από τα αποτελέσματά σου δεν έχουν ανέβει στους διακομιστές του OONI. Αν θέλεις να συνεισφέρεις στη βάση δεδομένων του OONI, παρακαλούμε να τα ανεβάσεις.";
 "Modal.ResultsNotUploaded.Button.Upload" = "Ανέβασμα";
@@ -252,6 +252,17 @@
 "Settings.Notifications.Enabled" = "Ενεργοποιημένο";
 "Settings.Notifications.OnTestCompletion" = "Ειδοποίηση ολοκλήρωσης της δοκιμής";
 "Settings.Notifications.OnNews" = "Ενημέρωσεις";
+"Settings.AutomatedTesting.Label" = "Automated testing";
+"Settings.AutomatedTesting.RunAutomatically" = "Run tests automatically";
+"Settings.AutomatedTesting.Reminder" = "Remind me to run tests";
+"Settings.AutomatedTesting.EnabledTests" = "Ενεργοποιημένες δοκιμές";
+"Settings.AutomatedTesting.Reminder.Time" = "Χρόνος";
+"Settings.AutomatedTesting.RunAutomatically.TimesPerDay" = "Test runs per day";
+"Settings.AutomatedTesting.Categories.Label" = "Κατηγορίες";
+"Settings.AutomatedTesting.Categories.Title" = "Κατηγορίες ιστοσελιδών για δοκιμή";
+"Settings.AutomatedTesting.Categories.Subtitle" = "%@ ενεργοποιημένες κατηγορίες";
+"Settings.AutomatedTesting.MonthlyMobileAllowance" = "Μηνιαίο όγκος χρήσης δεδομένων κινητής τηλεφωνίας";
+"Settings.AutomatedTesting.MonthlyWiFiAllowance" = "Μηνιαίο όγκος χρήσης δεδομένων WiFi";
 "Settings.Sharing.Label" = "Κοινή χρήση";
 "Settings.Sharing.UploadResults" = "Αυτόματη δημοσίευση αποτελεσμάτων";
 "Settings.Sharing.UploadResultsManually" = "Χειροκίνητο ανέβασμα αποτελεσμάτων";
@@ -290,6 +301,8 @@
 "Settings.SendEmail.Label" = "Αποστολή email στην υποστήριξη";
 "Settings.SendEmail.Error" = "Παρακαλούμε στείλτε ένα email στη διεύθυνση bugs@openobservatory.org με πληροφορίες σχετικά με την έκδοση της εφαρμογής και του iOS. Πατήστε \"Αντιγραφή στο πρόχειρο\" παρακάτω για να αντιγράψετε τη διεύθυνση email μας.";
 "Notification.FinishedRunning" = "Οι δοκιμές εκτελέστηκαν";
+"Notification.RunTestReminder" = "Hey, it's time to run OONI Probe!";
+"Notification.RunAutomatically" = "Running OONI Probe tests (automated testing enabled)";
 "OONIBrowser.TryMirror" = "Δοκίμασε mirror";
 "OONIBrowser.Loading" = "Φορτώνεται...";
 "OONIBrowser.Error" = "Προέκυψε ένα μη αναμενόμενο σφάλμα. Παρακαλούμε ξαναφόρτωσε αυτήν τη σελίδα.";
