--- a/ooniprobe/es.lproj/Localizable.strings
+++ b/ooniprobe/es.lproj/Localizable.strings
@@ -116,7 +116,7 @@
 "TestResults.Details.Methodology" = "Metodología";
 "TestResults.Details.ViewLog" = "Ver registro";
 "TestResults.Details.RawData" = "Datos";
-"TestResults.Details.CopyExplorerURL" = "Copiar URL del explorador";
+"TestResults.Details.CopyExplorerURL" = "Copy Explorer URL";
 "TestResults.Details.CopyToClipboard" = "Copiar al portapapeles";
 "TestResults.Details.Failed.Title" = "Falló";
 "TestResults.Details.Failed.Paragraph" = "Puedes ejecutar esta prueba de nuevo";
@@ -198,12 +198,12 @@
 "Modal.Error.NotificationNotEnabled" = "Son requeridos permisos de notificación. Por favor habilítalos en las Configuraciones de tu teléfono y luego en tu aplicación OONI Probe.";
 "Modal.Error.NotificationNotEnabled.GoToSettings" = "Ir a las Configuraciones";
 "Modal.Error.CantCloseScreen" = "Esta pantalla está bloqueada mientras esté corriendo una prueba.";
-"Modal.Error.RawDataNoInternet" = "Debe estar conectado a Internet para descargar los datos de medición sin procesar.";
+"Modal.Error.RawDataNoInternet" = "You need to be connected to the internet to download the raw measurement data.";
 "Modal.ResultsNotUploaded.Title" = "Resultados no se subieron";
 "Modal.ResultsNotUploaded.Paragraph" = "Algunos de los resultados de tus pruebas no han sido subidos a los servidores OONI. Si te gustaría contribuir al conjunto de datos de OONI, por favor súbelos.";
 "Modal.ResultsNotUploaded.Button.Upload" = "Subir";
 "Modal.ResultsNotUploaded.Uploading" = "Subiendo %@ ...";
-"Toast.ResultsUploaded" = "Subida exitosa";
+"Toast.ResultsUploaded" = "Upload successful";
 "Modal.EnableNotifications.AutomatedTesting" = "Habilita permisos de notificación para ejecutar pruebas automáticamente.";
 "Modal.EnableNotifications.News" = "Habilita permisos de notificación para recibir actualizaciones de noticias.";
 "Modal.EnableNotifications.Any" = "Habilita permisos de notificación para recibir notificaciones 'push'.";
@@ -221,11 +221,11 @@
 "Modal.ManualUpload.Disable" = "No, gracias!";
 "Modal.UploadFailed.Title" = "La subida falló";
 "Modal.UploadFailed.Paragraph" = "¿Desea reintentar o cancelar?";
-"Modal.Error.LogNotFound" = "Archivo de registro no encontrado";
-"Modal.Error.NoValidUrls" = "No se encontraron URL válidas";
-"Modal.Error.JsonEmpty" = "JSON vacío";
+"Modal.Error.LogNotFound" = "Log file not found";
+"Modal.Error.NoValidUrls" = "No valid URLs found";
+"Modal.Error.JsonEmpty" = "JSON empty";
 "Toast.CopiedToClipboard" = "Se ha copiado al portapapeles";
-"Toast.WillBeAvailable" = "Estará disponible en meno de 24h";
+"Toast.WillBeAvailable" = "Will be available within 24h";
 "Snackbar.ResultsNotUploaded.Text" = "No subido";
 "Snackbar.ResultsNotUploaded.Upload" = "Subir";
 "Snackbar.ResultsSomeNotUploaded.Text" = "Algunos no subidos";
@@ -252,6 +252,17 @@
 "Settings.Notifications.Enabled" = "Activado";
 "Settings.Notifications.OnTestCompletion" = "Notificar una vez que la prueba se haya completado";
 "Settings.Notifications.OnNews" = "Suscripción de noticias";
+"Settings.AutomatedTesting.Label" = "Automated testing";
+"Settings.AutomatedTesting.RunAutomatically" = "Run tests automatically";
+"Settings.AutomatedTesting.Reminder" = "Remind me to run tests";
+"Settings.AutomatedTesting.EnabledTests" = "Pruebas habilitadas";
+"Settings.AutomatedTesting.Reminder.Time" = "Hora";
+"Settings.AutomatedTesting.RunAutomatically.TimesPerDay" = "Test runs per day";
+"Settings.AutomatedTesting.Categories.Label" = "Categorías";
+"Settings.AutomatedTesting.Categories.Title" = "Categorías de sitios web a probar";
+"Settings.AutomatedTesting.Categories.Subtitle" = "%@ categorías habilitadas";
+"Settings.AutomatedTesting.MonthlyMobileAllowance" = "Cuota mensual de datos móviles";
+"Settings.AutomatedTesting.MonthlyWiFiAllowance" = "Cuota mensual de WiFi";
 "Settings.Sharing.Label" = "Compartir";
 "Settings.Sharing.UploadResults" = "Publicar resultados automáticamente";
 "Settings.Sharing.UploadResultsManually" = "Subida Manual de Resultado";
@@ -288,8 +299,10 @@
 "Settings.Performance.DashServerAddress" = "Servidor DASH";
 "Settings.Performance.DashServerPort" = "Puerto del servidor DASH";
 "Settings.SendEmail.Label" = "Enviar correo electrónico al soporte";
-"Settings.SendEmail.Error" = "Por favor envíe un correo electrónico a bugs@openobservatory.org con información sobre la aplicación y versión de iOS. Pulse \"Copiar al portapapeles\" abajo para copiar nuestro correo electrónico.";
+"Settings.SendEmail.Error" = "Por favor envíe un correo electrónico a bugs@openobservatory.org con información sobre la aplicación y versió de iOS. Pulse \"Copiar al portapapeles\" abajo para copiar nuestro correo electrónico.";
 "Notification.FinishedRunning" = "Finalizó la ejecución";
+"Notification.RunTestReminder" = "Hey, it's time to run OONI Probe!";
+"Notification.RunAutomatically" = "Running OONI Probe tests (automated testing enabled)";
 "OONIBrowser.TryMirror" = "Intentar servidor réplica";
 "OONIBrowser.Loading" = "Cargando...";
 "OONIBrowser.Error" = "Ocurrió un error inesperado. Por favor recargue esta página.";
