--- a/ooniprobe/pt-BR.lproj/Localizable.strings
+++ b/ooniprobe/pt-BR.lproj/Localizable.strings
@@ -198,12 +198,12 @@
 "Modal.Error.NotificationNotEnabled" = "Permissões de notificação são necessárias. Por favor, habilite-as nas Configurações do seu telefone e, em seguida, habilite-as em seu aplicativo OONI Probe.";
 "Modal.Error.NotificationNotEnabled.GoToSettings" = "Abrir Configurações";
 "Modal.Error.CantCloseScreen" = "Esta tela é bloqueada enquanto um teste é executado.";
-"Modal.Error.RawDataNoInternet" = "Você precisa se conectar à Internet para baixar os dados brutos de medição.";
+"Modal.Error.RawDataNoInternet" = "Você precisa estar conectado à Internet para baixar os dados brutos de medição.";
 "Modal.ResultsNotUploaded.Title" = "Resultados não enviados";
 "Modal.ResultsNotUploaded.Paragraph" = "Alguns dos seus resultados de teste não foram enviados para servidores da OONI. Se você quiser contribuir com o banco de dados da OONI, carregue-os.";
 "Modal.ResultsNotUploaded.Button.Upload" = "Carregar";
 "Modal.ResultsNotUploaded.Uploading" = "Fazendo upload de %@ ...";
-"Toast.ResultsUploaded" = "Carregamento bem-sucedido";
+"Toast.ResultsUploaded" = "Carregar com sucesso";
 "Modal.EnableNotifications.AutomatedTesting" = "Habilite as permissões de notificação para executar testes automaticamente.";
 "Modal.EnableNotifications.News" = "Habilite as permissões de notificação para receber atualizações de notícias.";
 "Modal.EnableNotifications.Any" = "Habilite as permissões de notificação para receber notificações não solicitadas.";
@@ -219,13 +219,13 @@
 "Modal.ManualUpload.Paragraph" = "Essa configuração permite que você carregue manualmente as medidas não publicadas.";
 "Modal.ManualUpload.Enable" = "Habilitar";
 "Modal.ManualUpload.Disable" = "Não, agradeço";
-"Modal.UploadFailed.Title" = "Falha ao enviar";
-"Modal.UploadFailed.Paragraph" = "Você gostaria de repetir ou de cancelar?";
+"Modal.UploadFailed.Title" = "Envio falhou";
+"Modal.UploadFailed.Paragraph" = "Você gostaria de repetir ou cancelar?";
 "Modal.Error.LogNotFound" = "Arquivo de log não encontrado";
-"Modal.Error.NoValidUrls" = "Nenhuma URL válida encontrada";
+"Modal.Error.NoValidUrls" = "Nenhuma URL válida encontrado";
 "Modal.Error.JsonEmpty" = "JSON vazio";
 "Toast.CopiedToClipboard" = "Copiado para a área de transferência";
-"Toast.WillBeAvailable" = "Estará disponível em 24h";
+"Toast.WillBeAvailable" = "Estará disponível dentro de 24h";
 "Snackbar.ResultsNotUploaded.Text" = "Não Carregado";
 "Snackbar.ResultsNotUploaded.Upload" = "Carregar";
 "Snackbar.ResultsSomeNotUploaded.Text" = "Alguns items não carregaram";
@@ -252,6 +252,17 @@
 "Settings.Notifications.Enabled" = "Ativado";
 "Settings.Notifications.OnTestCompletion" = "Notificar após a conclusão do teste";
 "Settings.Notifications.OnNews" = "Notícias";
+"Settings.AutomatedTesting.Label" = "Automated testing";
+"Settings.AutomatedTesting.RunAutomatically" = "Run tests automatically";
+"Settings.AutomatedTesting.Reminder" = "Remind me to run tests";
+"Settings.AutomatedTesting.EnabledTests" = "Testes habilitados";
+"Settings.AutomatedTesting.Reminder.Time" = "Hora";
+"Settings.AutomatedTesting.RunAutomatically.TimesPerDay" = "Test runs per day";
+"Settings.AutomatedTesting.Categories.Label" = "Categorias";
+"Settings.AutomatedTesting.Categories.Title" = "Categorias de sites para testar";
+"Settings.AutomatedTesting.Categories.Subtitle" = "%@ categorias habilitadas";
+"Settings.AutomatedTesting.MonthlyMobileAllowance" = "Franquia móvel mensal";
+"Settings.AutomatedTesting.MonthlyWiFiAllowance" = "Franquia mensal de Wi-Fi";
 "Settings.Sharing.Label" = "Compartilhando";
 "Settings.Sharing.UploadResults" = "Publicar os resultados automaticamente";
 "Settings.Sharing.UploadResultsManually" = "Carregamento manual dos resultados";
@@ -288,8 +299,10 @@
 "Settings.Performance.DashServerAddress" = "Servidor DASH";
 "Settings.Performance.DashServerPort" = "Porta do servidor DASH";
 "Settings.SendEmail.Label" = "Enviar e-mail para suporte";
-"Settings.SendEmail.Error" = "Por favor, envie um e-mail para bugs@openobservatory.org com informações sobre o aplicativo e a versão do iOS. Toque em \"Copiar para área de transferência,\" abaixo, para copiar nosso endereço de e-mail.";
+"Settings.SendEmail.Error" = "Por favor, envie um e-mail para bugs@openobservatory.org com informações sobre o aplicativo e a versão do iOS. Toque em \"Copiar para área de transferência\" abaixo para copiar nosso endereço de e-mail.";
 "Notification.FinishedRunning" = "Execução concluída";
+"Notification.RunTestReminder" = "Hey, it's time to run OONI Probe!";
+"Notification.RunAutomatically" = "Executando testes do OONI Probe (teste automatizado ativado)";
 "OONIBrowser.TryMirror" = "Tentar espelho";
 "OONIBrowser.Loading" = "Carregando...";
 "OONIBrowser.Error" = "Um erro inesperado ocorreu. Por favor, recarregue esta página.";
